--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -680,3 +680,18 @@
 // MARK: - NEW DELETE STRINGS
 "DELETE_SINGLE_TITLE" = "Delete \"%@\"?";
 "DELETE_MULTIPLE_TITLE" = "Delete \"%@\" and %d others?";
+
+// MARK: - UIDOCUMENT PICKER ALERT STRINGS FOR LOCAL FILES PLAYBACK
+/* New strings */
+"PLAY_FILE" = "Would you like to open files or an entire folder?";
+"PLAY_FOLDER" = "Folder";
+"PLAY_FILES" = "Files";
+
+/* New strings */
+"BUTTON_FOLDER" = "Folders";
+"BUTTON_FOLDER_HINT" = "Browse your folders";
+
+/* New strings */
+"EMPTY_FOLDER" = "Empty Folder";
+"EMPTY_FOLDER_DES" = "Add audio or video media in this folder";
+
