Add kids mode toggle to settings view

--- a/Resources/iOS/Settings.bundle/en.lproj/Root.strings
+++ b/Resources/iOS/Settings.bundle/en.lproj/Root.strings
@@ -171,3 +171,6 @@
 
 "SETTINGS_RESET" = "Reset the settings";
 "SETTINGS_RESET_TITLE" = "Reset";
+
+"SETTINGS_KIDSMODE_TOGGLE" = "Kids mode";
+"SETTINGS_KIDSMODE_SUBTITLE" = "Restrict some actions";
